--- a/HelpDeskTool/HelpDeskTool.csproj
+++ b/HelpDeskTool/HelpDeskTool.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>support.ico</ApplicationIcon>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
