--- a/HelpDeskTool/HelpDeskTool.csproj
+++ b/HelpDeskTool/HelpDeskTool.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="23.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="support.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
