--- a/HelpDeskTool/HelpDeskTool.csproj
+++ b/HelpDeskTool/HelpDeskTool.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.DirectoryServices" Version="8.0.0" />
+    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
