--- a/HelpDeskTool/App.config
+++ b/HelpDeskTool/App.config
@@ -10,6 +10,9 @@
             <setting name="DarkMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="TestSetting" serializeAs="String">
+                <value>Test</value>
+            </setting>
         </HelpDeskTool.Settings>
     </userSettings>
 </configuration>
