--- a/HelpDeskTool/Settings.settings
+++ b/HelpDeskTool/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="DarkMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="TestSetting" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Test</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
