--- a/SDMultiTool/SDMultiTool.csproj
+++ b/SDMultiTool/SDMultiTool.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>support.ico</ApplicationIcon>
+    <ApplicationIcon>assets\support.ico</ApplicationIcon>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="support.ico" />
+    <Content Include="assets\support.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +34,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Update="support.png">
+    <None Update="assets\support.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
